MDEV-8795 Equal expression propagation does not work for temporal literals